--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="docfx.msbuild" version="0.0.1-alpha-10277cd19d9" targetFramework="net45" />
+  <package id="docfx.msbuild" version="latest" targetFramework="net45" />
 </packages>
