--- a/.localization-config
+++ b/.localization-config
@@ -1,12 +1,7 @@
 {
   "locales": [ "ja-jp", "de-de", "fr-fr", "zh-cn", "zh-tw", "ko-kr", "es-es", "it-it" ],
   "files": [
-	"virtualization/community/*.md",
-	"virtualization/community/**/*.md",
-	"virtualization/hyperv_on_windows/**/*.md", 
-	"virtualization/hyperv_on_windows/*.md",
-	"virtualization/windowscontainers/*.md",
-	"virtualization/windowscontainers/**/*.md"
+	"virtualization/**/*.md"
   ],
   "useJavascriptMarkdownTransformer": true,
   "includeDependencies": true,
