--- a/.localization-config
+++ b/.localization-config
@@ -5,5 +5,6 @@
   ],
   "useJavascriptMarkdownTransformer": true,
   "includeDependencies": true,
-  "autoPush": true
+  "autoPush": true,
+  "xliffVersion": "2.0"
 }
