--- a/.localization-config
+++ b/.localization-config
@@ -1,6 +1,7 @@
 {
   "locales": [ "ja-jp", "de-de", "fr-fr", "zh-cn", "zh-tw", "ko-kr", "es-es", "it-it" ],
   "files": [
+  	"virtualization/hyperv_on_windows/checkpoints_TEST.md",
 	"virtualization/**/*.md"
   ],
   "useJavascriptMarkdownTransformer": true,
