--- a/.localization-config
+++ b/.localization-config
@@ -1,5 +1,5 @@
 {
-  "locales": [ "ja-jp", "de-de", "fr-fr", "zh-cn", "zh-tw", "ko-kr", "es-es", "it-it" ],
+  "locales": [ "ja-jp", "de-de", "fr-fr", "zh-cn", "zh-tw", "ko-kr", "es-es", "it-it", "vi-vn" ],
   "files": [
   	"virtualization/hyperv_on_windows/checkpoints_TEST.md",
 	"virtualization/**/*.md"
