--- a/.localization-config
+++ b/.localization-config
@@ -1,6 +1,6 @@
 {   
    "locales": ["de-de", "zh-cn" ], 
-   "files":["**/*.md", "**/**/*.md"], 
+   "files":["**/*.md", "**/**/*.md", "ICC_Temp_2.resx"], 
     "includeDependencies":true, 
     "autoPush":true, 
     "xliffVersion":"1.2" 
